CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(LEVELDB_DUMP)
#FIND_PACKAGE(leveldb REQUIRED)
LINK_DIRECTORIES(/tmp/leveldb/out-static)
INCLUDE_DIRECTORIES(/tmp/leveldb/include)
ADD_EXECUTABLE(leveldb_dump leveldb_dump.cpp)
TARGET_LINK_LIBRARIES(leveldb_dump leveldb)
TARGET_LINK_LIBRARIES(leveldb_dump snappy)
